# coffee-chat-scheduler

./: .gitignore  README.md  alembic.ini  pyproject.toml
Docs/: Create_Account.md  Diagrams_Data_Model.md  Diagrams_User_Flow_Registration.md  User_Scenario_Create_Account.md  User_Scenario_Create_Account_KR.md  User_Story_Create_Account.md  User_Story_Create_Account_KR.md
Docs/dev_log/: 20260106_get_my_info_api.md  20260106_login_implementation.md  20260106_signup_api_test.md  20260107_logout_api.md  20260107_unregister_api.md  20260107_update_user_info_api.md  20260110_calendar_api_and_auth_fix.md  20260110_calendar_create_and_update_api.md  signup_api_test.md
Docs/prompts/: documentation_workflow.md
alembic/: env.py
alembic/versions/: 918cd1646b62_auto_generate_migration.py
appserver/: app.py  db.py
appserver/apps/account/: constants.py  deps.py  endpoints.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: endpoints.py  exceptions.py  models.py  schemas.py
appserver/libs/collections/: sort.py
appserver/libs/datetime/: calendar.py
tests/: conftest.py  test_hello.py
tests/apps/account/: test_endpoints.py  test_login_api.py  test_logout_api.py  test_me_api.py  test_signup.py  test_signup_api.py  test_unregister_api.py  test_update_user_api.py
tests/apps/calendar/: test_booking_api.py  test_calendar.py  test_calendar_api.py  test_timeslot_api.py
tests/libs/datetime/: test_calendar.py
