[tool.poetry]
name = "coffee-chat-sheduler"
version = "0.1.0"
description = ""
authors = ["zip-sa <tmddn0505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
sqlmodel = "^0.0.27"
sqlalchemy-utc = "^0.14.0"
aiosqlite = "^0.22.1"
alembic = "^1.17.2"
greenlet = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "8.3.4"
env = []
addopts = " --strict-markers --tb=short --asyncio-mode=auto -p no:warnings --doctest-modules"
python_files = ["tests.py", "test_*.py"]
rootdir = "./"
testpaths = ["./tests", "./appserver"]
pythonpath = ["./"]
filterwarnings = ["error", "ignore::DeprecationWarning:etcd3.*:"]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
